5d (0.0.5) unstable; urgency=low

  * implement character literals (Scheme compatible).
  * rename 'reduce' to 'simplify'
  * for builtins, if the argument is an unevaluated application, just don't evaluate the builtin.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Mon, 28 Nov 2011 19:00:00 +0100

5d (0.0.4) unstable; urgency=low

  * move common symbols to AST/Symbols.
  * add strFromList

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Sun, 27 Nov 2011 13:00:29 +0100

5d (0.0.3) unstable; urgency=low

  * add support for (big) Integer.
  * rename "intern" to "symbolFromStr".
  * fix operator precedences of '| '; '$ '=>

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Sat, 26 Nov 2011 23:55:29 +0100

5d (0.0.2) unstable; urgency=low

  * Change config file format.
  * Use Application and Abstraction abstractions throughout the language instead of hard-coding conses.
  * update docs.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Sat, 19 Nov 2011 23:20:29 +0100

5d (0.0.1) unstable; urgency=low

  * Initial Release.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Mon, 14 Nov 2011 23:13:29 +0100