@@ -7,6 +7,7 @@ list comprehensions in []
 numbers: 1. Int (done), 2. Integer (done), 3. Q, 4. Float (done), 5. arbitrary-precision fixed point
 equality (numbers, strings(?) and booleans (?) and symbols (?) and lists (?)) and non-equality.
 Builtin ops: power
+When printing builtin ops, revert to the symbol?
 Complex number literals: #C(3.2 2)
 Array literals: #(a b c)
 subseq "Hello, World" 2 9
