@@ -3,6 +3,7 @@
   * implement character literals (Scheme compatible).
   * rename 'reduce' to 'simplify'
   * for builtins, if the argument is an unevaluated application, just don't evaluate the builtin.
+  * automatically go all the way down to the default should we not be able to apply a BuiltinOperation.
 
  -- Danny Milosavljevic <danny_milo@yahoo.com>  Mon, 28 Nov 2011 19:00:00 +0100
 
